--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
+        "jquery-smart-wizard": "git://github.com/mstratman/jQuery-Smart-Wizard.git",
         "laravel-mix": "^2.1.11",
         "lodash": "^4.17.4",
         "popper.js": "^1.12",
